# 3d-agent-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.ru.md  config.yaml  docker-compose.big.yml  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  release.yml
agents/: conical_overhang_fixer.py  coordinator.py  enhanced_orientation_analyzer.py  generation_agent.py  image_generation_agent.py  intelligent_postprocessing_agent.py  orca_orientation_analyzer.py  planner_agent.py  surface_on_bed.py
agents/autogen/: __init__.py  autogen_coordinator.py  generation_3d_agent.py  image_generation_agent.py  planner_agent.py  postprocessing_agent.py  verification_agent.py
api_clients/: autogen_llm_config.py  comfyui_client.py  image_api_client.py  llm_client.py  local_3d_client.py  local_image_client.py  tripo_client.py
docker/admin/: Dockerfile  app.py
docker/comfyui/: Dockerfile  install_custom_nodes.sh  manager-config.ini
docker/flux/: Dockerfile  server.py
docker/hunyuan3d/: Dockerfile  entrypoint.sh
docker/nginx/: nginx.conf
docker/qwen-image-edit/: Dockerfile  README.md  app.py  requirements.txt
docs/: ARCHITECTURE.md  DOCKER.md  QUICKSTART.md  QUICKSTART_UV.md  agents.md
docs/PR/diagrams/: 01_component.puml  02_sequence.puml  03_activity_gci.puml  04_deployment.puml  05_classes.puml
mcp_server/: README.md  server.py
tests/: test_agents.py  test_config.py  test_file_manager.py  test_image_api_client_multiview_output.py  test_session_store.py
ui/: __init__.py  events.py  events_ystu.py  gradio_app.py  helpers.py  state.py  ystu_app.py
ui/components/: surface_viewer.py
ui/handlers/: __init__.py  analytics.py  generation.py  image.py  misc.py  monitoring.py  multiview.py  orientation.py
ui/tabs/: __init__.py  analytics_tab.py  left_panel.py  model_tab.py  monitoring_tab.py  multiview_tab.py  preview_tab.py  printable_tab.py  ystu_left_panel.py
utils/: config.py  file_manager.py  image_processor.py  logger.py  mesh_analyzer.py  mesh_compare.py  metrics_collector.py  session_store.py
