[project]
name = "3d-agent-mcp"
version = "0.2.0"
description = "AI-powered 3D model generation system with intelligent post-processing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "3dAgentMCP Team"}
]
keywords = [
    "3d-generation",
    "ai",
    "autogen",
    "gradio",
    "3d-printing",
    "mcp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core framework
    "camel-ai>=0.2.80",
    "gradio>=6.0.0",

    # 3D Generation APIs
    "tripo3d>=0.3.7",

    # Image Generation APIs
    "openai>=2.12.0",
    "replicate>=1.0.0",

    # Background Removal
    "rembg>=2.0.69",
    "onnxruntime>=1.17.0",

    # LLM APIs
    "anthropic>=0.75.0",

    # MCP Protocol
    "mcp>=1.24.0",

    # AutoGen Framework (ag2 = maintained fork with classic autogen API)
    "ag2>=0.11.0",

    # 3D Processing
    "trimesh[easy]>=4.10.0",
    "numpy>=2.2.0",
    "scipy>=1.16.0",
    "scikit-image>=0.19.0",

    # Visualization
    "matplotlib>=3.10.0",
    "pillow>=12.0.0",
    "plotly>=5.18.0",

    # Utilities
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.0",
    "aiohttp>=3.13.0",
    "pyyaml>=6.0.0",
    "colorlog>=6.10.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "black>=25.0.0",
    "flake8>=7.3.0",
    "mypy>=1.0.0",
    "ruff>=0.8.0",
]

# Optional 3D providers
meshy = [
    "meshy-ai>=0.1.0",
]

# Support generation (experimental)
supports = [
    "triangle>=20230923",
    "pyclipr>=0.1.0",
    "pyslm>=0.6.0",
]

# All optional dependencies
all = [
    "3d-agent-mcp[dev,meshy,supports]",
]

[project.urls]
Homepage = "https://github.com/yourusername/3d-agent-mcp"
Documentation = "https://github.com/yourusername/3d-agent-mcp/blob/master/ARCHITECTURE.md"
Repository = "https://github.com/yourusername/3d-agent-mcp"
Issues = "https://github.com/yourusername/3d-agent-mcp/issues"

[project.scripts]
3d-agent = "ui.gradio_app:main"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api_clients", "ui", "utils", "mcp_server", "postprocessing"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "black>=25.0.0",
    "flake8>=7.3.0",
    "mypy>=1.0.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
# Use PyPI for all packages by default
# Can configure git sources or local paths here if needed

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["agents", "api_clients", "utils", "ui"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
